[package]
name = "now_playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
youtube_dl = { version = "0.8.1", features = ["downloader"]}
thiserror = "1.0.40"
anyhow = "1.0.71"
cached = "0.43.0"
derive_more = "0.99.17"
url = "2.3.1"
dashmap = "5.4.0"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }